# MIP

./: CMakeLists.txt  README.md
include/: CMakeLists.txt  morphology.h  morphologykernel.h
src/: CMakeLists.txt  main.cpp  morphology.cpp  morphology.h  morphologykernel.cu
src/cuda/: morphology.cu  morphology.cuh  morphology2d.cu  morphology2d.cuh  morphology3d.cu  morphology3d.cuh
